# forge

./: .env.example  Cargo.toml  Dockerfile.indexer  Dockerfile.retrieval  INSTRUCTIONS.md  ask_forge.sh  docker-compose.yml  forge.windows.yaml  forge.yaml  prometheus.yml  setup.py  start.py  validate.py
.github/workflows/: indexer-ci.yml
crates/forge-indexer/: Cargo.toml  README.md
crates/forge-indexer/src/: chunker.rs  conversion.rs  embedder.rs  errors.rs  index_svc.rs  lib.rs  logging.rs  pipeline.rs  proto.rs  watcher.rs
crates/forge-indexer/src/chunker/: analysis.rs  parser.rs  similarity.rs  strategies.rs  types.rs  utils.rs
crates/forge_domain/: Cargo.toml
crates/forge_domain/src/: chunking.rs  code_chunk.rs  embedding.rs  indexing.rs  lib.rs  search.rs
crates/forge_services/src/indexing/: indexing_service.rs  mock_embedder.rs  mod.rs  simple_chunker.rs
crates/forge_services/src/search/: mod.rs  search_service.rs
crates/forge_services/src/vector_store/: in_memory.rs  mod.rs  store_trait.rs
plans/: 2025-08-03-production-grade-indexer-v1.md
proto/: change_event.proto  retrieval.proto
